# UGV-ROS2

bags/rosbag2_2024_10_01-17_26_52/: metadata.yaml
nav_ws_client/src/scout/: CMakeLists.txt  package.xml
nav_ws_client/src/scout/launch/: scout.launch.py
nav_ws_client/src/scout/scripts/: localisation.py  utils_state_est.py
nav_ws_remote/src/scout/: CMakeLists.txt
nav_ws_remote/src/scout/config/: WP1.txt  simple_config.rviz
nav_ws_remote/src/scout/launch/: scout.launch.py
nav_ws_remote/src/scout/scripts/: main.py
nav_ws_remote/src/scout/urdf/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
nav_ws_remote/src/scout/urdf/meshes/: rplidar_2.stl  rplidar_2_collision.stl  scout_mini_base_link_collision.stl  wheel_collision.stl
nav_ws_remote/src/scout/worlds/: empty.world
